[package]

name = "servo-websocket"
version = "0.20.1"
authors = ["cyderize <admin@cyderize.org>"]

description = "A WebSocket (RFC6455) library for Rust."

documentation = "http://cyderize.github.io/rust-websocket/doc/websocket/"
homepage = "http://cyderize.github.io/rust-websocket/"
repository = "https://github.com/cyderize/rust-websocket.git"
readme = "README.md"
keywords = ["websocket", "websockets", "rfc6455"]
license = "MIT"

[lib]
name = "websocket"

[dependencies]
hyper = "0.10"
unicase = "1.0.1"
openssl = "0.9"
url = "1.0"
bitflags = "1.0"
rand = "0.3.12"
byteorder = "1.0"
net2 = "0.2.17"
base64 = "0.6"

[dev-dependencies]
serde_json = "1"

[features]
nightly = ["hyper/nightly"]
